--- a/src/main/resources/templates/homepage-edit.html
+++ b/src/main/resources/templates/homepage-edit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Movie Page</title>
+    <link rel="stylesheet" th:href="@{/homepage-form.css}" href="/homepage-form.css">
 </head>
 <body>
 <h1>Edit Movie</h1>
