--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Movies Management Page</title>
+    <link rel="stylesheet" th:href="@{/homepage.css}" href="/homepage.css">
 </head>
 <body>
 <h2 th:text="'WELCOME, ' + ${session.accounts.email}">Welcome</h2>
